2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fixed the dist

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-da-capplet.c: (show_dialog): fixes some errors with the path

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-da-capplet.c: (show_dialog): use the correct .glade

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix gladedir use

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix a name

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am:
	* default-applications-properties.glade:
	* gnome-da-capplet.c, gnome-da-capplet.h:
	* gnome-da-item.c, gnome-da-item.h:
	* gnome-da-xml.c, gnome-da-xml.h:
	* gnome-default-applications-properties-structs.c:
	* gnome-default-applications-properties.c:
	* gnome-default-applications-properties.glade:
	* gnome-default-applications.xml.in:
	new gnome-default-applications capplet, 
	patch by Luca Cavalli <loopback@slackit.org> updated for the 
	gnome-control-center build system

2006-01-03  pholie <golierr@gmail.com>

	Fixes bug #324629

	* gnome-default-applications-properties-structs.c: added Opera to
	list of default browsers.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-default-applications-properties-structs.c: Mark the
	structs static.

2005-10-20  Colin Leroy <colin@colino.net>

	* gnome-default-applications-properties-structs.c: added
	Sylpheed Claws to the list of possible mailers.

2005-09-25  Sebastien Bacher  <seb128@debian.org>

	* gnome-default-applications-properties-structs.c: 
	list evolution-2.4 binary, patch by Jan de Groot <jan@jgc.homeip.net>
	(Closes: #315871).

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* gnome-default-applications-properties-structs.c: 
	list "thunderbird" as program name, 
	patch from Pawel Worach <sajd@telia.com> (Closes: #167757).

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* gnome-default-applications-properties.glade:
	fix a warning about the icon, 