@@ -20,7 +20,12 @@ xmldatadir = $(datadir)/gnome-default-applications
 xmldata_DATA = $(xmldata_in_files:.xml.in=.xml)
 @INTLTOOL_XML_RULE@
 
-INCLUDES   = $(GNOMECC_CAPPLETS_CFLAGS) $(DEFAULT_APPLICATIONS_CAPPLET_CFLAGS) -DGLADEDIR=\""$(gladedir)"\"
+INCLUDES   = 					\
+	$(GNOMECC_CAPPLETS_CFLAGS)		\
+	$(DEFAULT_APPLICATIONS_CAPPLET_CFLAGS)	\
+	-DGLADEDIR=\""$(gladedir)"\"		\
+	-DDATADIR=\""$(datadir)"\"
+
 noinst_DATA = gnome-default-applications.xml.in
 CLEANFILES = $(GNOMECC_CAPPLETS_CLEANFILES) $(Desktop_in_files) $(desktop_DATA) $(xmldata_DATA)
 EXTRA_DIST = $(glade_DATA) gnome-default-applications.xml.in
