@@ -1,3 +1,10 @@
+2006-01-16  Rodrigo Moya <rodrigo@novell.com>
+
+	* gnome-da-xml.c (gnome_da_xml_load_list): just read the file
+	from the $datadir we installed it.
+
+	* Makefile.am: -DDATADIR.
+
 2006-01-16  Sebastien Bacher  <seb128@debian.org>
 
 	* Makefile.am: fixed the dist
